--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,12 @@
     --fw-normal: 400;
     --fw-bold: 700;
     --fw-black: 900;
+    --grid: minmax(1em, 10%)
+            minmax(10rem, 22ch)
+            minmax(20rem, 23ch)
+            minmax(1em, 3fr)
+            max-content
+            ;
 }
 
 body {
@@ -23,6 +29,10 @@ body {
 
 h1, h2, h3 {
     line-height: 1;
+}
+
+p {
+    margin-top: 0;
 }
 
 .btn {
@@ -52,7 +62,7 @@ h1, h2, h3 {
     color: var(--clr-primary);
 }
 
-.btn--outline:hover {
+.btn--outline:h over {
     background-color: var(--clr-dark);
     outline-color: var(--clr-dark);
     color: var(--clr-light);
@@ -70,7 +80,8 @@ header {
 .nav__list {
     display: flex;
     justify-content: space-between;
-    margin: 0;
+    max-width: 35rem;
+    margin: 0 auto;
     /* margin-top: 1em; */
     padding: 1em;
     list-style: none;
@@ -80,9 +91,18 @@ header {
     letter-spacing: 1px;
 }
 
+.nav__list-item {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
 .nav__link {
     text-decoration: none;
     color: inherit;
+}
+
+.nav__link:hover {
+    color: var(--clr-primary);
 }
 
 .weather {
@@ -90,6 +110,10 @@ header {
     grid-template-columns: min-content 1fr;
     background: var(--clr-dark);
     color: var(--clr-light);
+    width: max-content;
+    margin: 1em auto -2em;
+    position: relative;
+    z-index: 1;
 }
 
 .weather__icon {
@@ -116,8 +140,8 @@ header {
 .weather__info span {
     /* opacity: 1; */
     color: var(--clr-light);
-    margin-left: auto;
     margin-right: .75rem;
+    margin-left: 1em;
     font-size: 1rem;
     text-transform: none;
 }
@@ -155,5 +179,64 @@ header {
     line-height: 1;
     font-weight: var(--fw-black);
     font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+.main__intro {
+    margin-bottom: 4em;
+}
+
+@media (min-width: 700px) {
+    .main {
+        display: grid;
+        grid-template-columns: var(--grid);
+        justify-items: start;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .main > * {
+        grid-column: 2 / 4;
+    }
+
+    .main--ski {
+        background-position: left bottom;
+    }
+}
+
+@media (min-width: 1000px) {
+    header {
+        display: grid;
+        grid-template-columns: var(--grid);
+        align-items: center;
+    }
+
+    .logo,
+    .nav,
+    .weather {
+        grid-row: 1;
+        margin: 0;
+    }
+
+    .logo {
+        grid-column: 2;
+    }
+
+    .nav {
+        grid-column: 2/5;
+        justify-self: end;
+        margin-right: 3em;
+    }
+
+    .weather {
+        grid-column: -2 / -1;
+        justify-self: end;
+    }
+}
+
+@media (min-width: 1200px) {
+    .main--ski {
+        background-position: center right;
+    }
 }
 
